--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -31,6 +31,7 @@ services:
       - internal 
       - divbase-observability
   worker-quick:
+    hostname: worker-quick
     build: &worker-build
       context: .. 
       dockerfile: docker/worker.dockerfile
@@ -72,6 +73,7 @@ services:
     ports:
       - "8001:8001" # for prometheus metrics scraping; need to have unique port per worker to build compose stack, but can then scrape based on the service name and port 8001
   worker-long:
+    hostname: worker-long
     build: *worker-build
     healthcheck: *worker-healthcheck
     depends_on: *worker-api-depends
