Update pytest ini to use worker rabbitmq account

--- a/pytest.ini
+++ b/pytest.ini
@@ -15,7 +15,7 @@ env =
     # API and worker test settings (used in unit tests - as integration/e2e get the settings from docker-compose)
     DIVBASE_ENV=test
     FRONTEND_BASE_URL=http://localhost:8001
-    CELERY_BROKER_URL=pyamqp://guest@localhost:5673//
+    CELERY_BROKER_URL=pyamqp://celery_user:badpassword@localhost:5673//
     CELERY_RESULT_BACKEND=db+postgresql://divbase_user:badpassword@localhost:5433/divbase_db
     ASYNC_DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@localhost:5433/divbase_db
     SYNC_DATABASE_URL=postgresql+psycopg2://divbase_user:badpassword@localhost:5433/divbase_db
