--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,8 @@ nav:
     - Documentation: development/documentation.md
     - Sending Emails: development/sending-emails.md
     - Testing: development/testing.md
+    - Monitoring and observability: development/monitoring_and_observability.md
+    - "Monitoring: Celery Worker Metrics": development/worker_metrics.md
   - "Go to DivBase Website": https://divbase.scilifelab.se
 
 hooks:
@@ -125,6 +127,8 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.superfences
   - pymdownx.tilde
+  - pymdownx.arithmatex:
+      generic: true
 
 extra:
   social:
@@ -133,3 +137,6 @@ extra:
     - icon: fontawesome/solid/globe
       link: https://divbase.scilifelab.se
       name: Website
+
+extra_javascript:
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js # for rendering LaTeX math expressions; use together with pymdownx.arithmatex
