--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dev = [
     "mkdocs>=1.6.1",
     "pymdown-extensions>=10.19.1",
     "mkdocs-material[imaging]>=9.7.0",
+    "virtualenv>=20.36.1", # state explictly to bump version for security reasons
 ]
 benchmarking = [
     "scipy>=1.16.0",
