--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -4,7 +4,7 @@ dynamic = ["version"]
 readme = "../../README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard]>=0.115.12,<0.116", # TODO - bump 
+    "fastapi[standard]>=0.121.3,<0.128",
     "uvicorn>=0.34.3,<1",
     "httpx>=0.28.1,<1",
     "sqlalchemy[asyncio]>=2.0.43,<3",
@@ -19,7 +19,11 @@ dependencies = [
     "psycopg2-binary>=2.9.11,<3",
     "prometheus-client>=0.24.0,<1",
     "psutil>=7.2.0,<8",
-    "divbase-lib"
+    "divbase-lib",
+    "starlette>=0.49.1,<0.53.0",
+    "python-multipart>=0.0.22",
+    "filelock>=3.20.3",
+    "urllib3>=2.6.3",
 ]
 
 [build-system]
