--- a/packages/divbase-lib/pyproject.toml
+++ b/packages/divbase-lib/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "boto3>=1.38.15",
     "pandas>=2.2.3",
+    "numpy>=1.26.4,<2.4.0",
 ]
 
 [build-system]
