Add helper script to create scaffold split VCFs
To be able to test performance differences between a monolithic VCF
versus splitting the same data per scaffold

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ sample_metadata_*.tsv
 *.vcf
 *.vcf.gz
 *.vcf.gz.csi
+*.vcf.gz.tbi
 !tests/fixtures/*.vcf.gz
 tests/fixtures/temp*
 tests/fixtures/merged*
