Make spliting script write a file list for upload
The split files can thus be uploaded to S3 in on command
divbase-cli files upload --file-list split_scaffold_files.txt

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ bcftools_divbase_job_config.json
 vcf_dimensions.tsv
 mock*.tsv
 task_records*.json
+split_scaffold_files.txt
 
 #MacOS artifacts
 .DS_Store
