--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ mock*.tsv
 task_records*.json
 split_scaffold_files.txt
 scripts/benchmarking/*.yaml
+scripts/benchmarking/results
 
 #MacOS artifacts
 .DS_Store
