Add CLI to create metadata TSV from dimensions
Users can use this to add their own user defined columns for these
samples.

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,11 @@ sample_metadata_*.tsv
 *.vcf
 *.vcf.gz
 *.vcf.gz.csi
+*.vcf.gz.tbi
 !tests/fixtures/*.vcf.gz
 tests/fixtures/temp*
 tests/fixtures/merged*
+divbase_metadata_template*.tsv
 
 # query job config files
 bcftools_divbase_job_config.json
@@ -28,11 +30,12 @@ bcftools_divbase_job_config.json
 vcf_dimensions.tsv
 mock*.tsv
 task_records*.json
+split_scaffold_files.txt
+scripts/benchmarking/*.yaml
+scripts/benchmarking/results
 
 #MacOS artifacts
 .DS_Store
 
 # mkdocs build cache
 .cache/
-# pypi 
-dist/
